--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <tr><td>
 Samuel lieb
  </td>
-</tr>    
+</tr>
     <tr>
     <td>
 COmpetition
@@ -25,3 +25,16 @@ COmpetition
      </tr>
      </table>
    
+     <H3>Order something from us</H3>
+
+     <form action="//www.html.am/tags/html-form-tag-action.cfm" method="get">
+        Name:
+        <input type="text" name="name" value="" maxlength="90" style="width:100px;">
+        <br>
+        Pick a color:
+        <input type="radio" name="color" value="whasher"> whasher
+        <input type="radio" name="color" value="something yummy"> something yummy
+        <input type="radio" name="color" value="mommy can you get me a straw"> mommy can you get me a straw
+        <br>
+        <input type="submit" value="Submit">
+        </form>
