changed the link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ COmpetition
    
      <H3>Order something from us</H3>
 
-     <form action="//www.html.am/tags/html-form-tag-action.cfm" method="get">
+     <form action="https://www.accuweather.com/" method="get">
         Name:
         <input type="text" name="name" value="" maxlength="90" style="width:100px;">
         <br>
